# harnessoptimizer

./: .agentignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONFIG-MANAGER.md  DREAMING.md  GUIDELINE.md  LANE_A_ISSUES.md  LICENSE  PHASES.md  PLAN.md  PRD-0.9.1-RUN-CLI.md  README.md  ROADMAP.md  TESTPLAN.md  TODO.md  VERSION0.4.md  VERSION0.5.1.md  VERSION0.5.2.md  VERSION0.5.md  VERSION0.6.0.md  VERSION0.9.1.md  VERSION0.9.2.md  VERSION0.9.3-WAVES-4-7.md  VERSION0.9.3.md  VERSION0.9.4.md  VERSION0.9.5.md  VERSION1.1.md  akta2_state_analysis.md  brain.md  compactionbugfix.md  pyproject.toml
.github/workflows/: channel-promote.yml
brain/: PROVIDER_HEALTH_NOTES.md  README.md  filing-rules.md  resolver.md
brain/active-work/: _template.md  current.md
brain/evals/: provider-canaries.json  rail-checks.json  resolver-cases.json
brain/incidents/: 2026-04-04-minimax-max-retries-exhausted.md  2026-04-22-soul-prefill-loader-mismatch.md  (+1 more)
data/: provider_endpoints.json
docs/: CHANNELS.md  EXTENSIONS.md  HOT-RELOAD-PROOF.md  PLAN.md  WORKFLOW.md
extensions/: caveman.yaml  cron.yaml  dreams.yaml  scripts.yaml  tool_surface.yaml  vault_plugins.yaml
scripts/: apply_reload_patch.py  channel_promote.py  channel_update.py  convert_vault.py  dreaming_pre_sweep.py  post-merge-hook.sh  probe_memory_meta.py  run.sh  validate_testplan.py
tests/: test_agent_management.py  test_auto_update.py  test_auxiliary_optimizer.py  test_budget_analyzer.py  test_budget_cli.py  test_budget_profile.py  test_budget_recommender.py  test_budget_tuner.py  test_budget_watch.py  test_catalog.py  test_catalog_refresh.py  test_catalog_v091.py  test_caveman.py  test_caveman_cli.py  test_caveman_config.py  test_channel_management.py  test_cli_dispatch.py  test_cli_integration.py  test_cli_smoke.py  test_cli_unified.py  test_commands.py  test_config_fix.py  test_config_maintainer.py  test_config_watcher.py  test_devdo_executor.py  test_diagnosis.py  test_discover.py  test_dreams_decay.py  test_dreams_fidelity.py  test_dreams_memory_meta.py  test_dreams_recall.py  test_dreams_sweep.py  test_e2e_workflow.py  test_extensions_commands.py  test_extensions_drift.py  test_extensions_integration.py  test_extensions_loader.py  test_extensions_schema.py  test_extensions_status.py  test_extensions_sync.py  (+79 more)
(+207 files in other folders)
