[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermesoptimizer"
version = "0.4.0"
description = "Analysis, hygiene, and workflow orchestration for Hermes Agent environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hermes"}]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
hermesoptimizer = "hermesoptimizer.run_standalone:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
