[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermesoptimizer"
version = "0.9.3"
description = "Analysis, hygiene, and workflow orchestration for Hermes Agent environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0-NC"}
authors = [{name = "Hermes"}]
dependencies = ["PyYAML>=6.0", "cryptography>=43.0", "argon2-cffi>=23.1"]

[project.scripts]
hermesoptimizer = "hermesoptimizer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermesoptimizer = ["extensions/data/*.yaml", "data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"